# manifest-gen

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: flakehub-publish-rolling.yml
src/: constants.rs  display.rs  icons.rs  lib.rs  logger.rs  main.rs  manifest.rs  orientation.rs  prompts.rs
src/adapters/: helpers.rs  icon_generator.rs  mod.rs
src/domain/: display.rs  icons.rs  manifest.rs  mod.rs  orientation.rs
src/interactors/: helpers.rs  icon_generator.rs  manifest_builder.rs
