[package]
name = "manifest-gen"
version = "0.2.1"
edition = "2018"
license = "MIT"
description = "A manifest.json generator"
readme = "README.md"
repository = "https://github.com/fraol0912/manifest-gen"
homepage = "https://github.com/fraol0912/manifest-gen"

[dependencies]
anyhow = "1.0"
inquire = "0.2.1"
image = "0.23.14"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.1.5", features = ["derive"] }
